# HS005

./: Makefile  Makefile.param  test_main
app/live555/: AudioInput.cpp  AudioInput.hh  AudioStreamSource.hh  H264VideoServerMediaSubsession.cpp  H264VideoStreamSource.cpp  H264VideoStreamSource.hh  Makefile  Makefile.param  OSDhsl.cpp  Options.cpp  VideoInput.cpp  VideoInput.hh  bitmapinfo.h  linklist.c  logodata_100x100_bgra.h  m213_rtsp_server_with_audio-20191204.7z  test.sh  ysx_osd.c  ysx_rtsp_server
app/live555/RCF/: RCFServer.cpp  RCFServer.hh
app/live555/aispeech/: aiengine.c  audio.h
app/live555/lib/: .gitignore
app/live555/live555/: .gitignore  config.mips-linux-gnu  config.mips-linux-gnu-uclibc
app/live555/multicast/: CMakeLists.txt
app/nvram/: Makefile  nvram.h  nvram_get  nvram_get.c  nvram_set  nvram_set.c
app/qr_code/: Makefile  qr_code.c  qr_scan  raw.nv12  snap.yuv
app/rtsp/: AudioInput.cpp  AudioRTPCommon.cpp  AudioServerMediaSubsession.cpp  AudioServerMediaSubsession.hh  AudioStreamSource.cpp  CMakeLists.txt  Makefile  Options.hh  Sample-unicast-RTSPServer.cpp  VideoInput.cpp  VideoInput.cpp~  VideoInput.hh  ivs.conf  linklist.h  rect.conf  setir_mango  ysx_rtsp_server  ysx_sample_one_stream.c
app/rtsp/aispeech/: aiengine.h  audio.c  cJSON.h  record_interface.h  test_native_asr.c
app/rtsp/multicast/: Sample-RTSPServer.cpp
app/rtsp/unicastTest/: CMakeLists.txt  H264VideoServerMediaSubsession.cpp  Sample-unicast-RTSPServer.cpp
app/tstream/: .gitignore  Makefile  adpcm.c  adpcm.h  aes.c  audio_codec.c  audio_codec.h  avi_demuxer.c  back_from_main.c  circular_buf.c  circular_buf.h  common_env.c  complite.sh  conf.c  demuxer_test.c  ez-setup.c  ff_demuxer.c  ff_dmuxer.c  ff_muxer.c  ff_muxer.h  guesthandle.c  http_curl.c  http_curl.h  index_parse.c  jsoon.c  jsoon.h  led_ctrl.c  linklist.c  linklist.h  log.c  log.h  main.c  media.c  media.h  media_record.c  media_record.h  memory_debug.c  memory_debug.h  monitor.c  monitor.h  (+46 more)
app/tstream/include/: common_env.h  common_func.h
driver/uln2803_t/: .motor.o.cmd  .uln2803.ko.cmd  .uln2803.mod.o.cmd  .uln2803.o.cmd  Makefile  modules.order  motor.c  motor.h  uln2803.mod.c
driver/uln2803_t/.tmp_versions/: uln2803.mod
driver/uln2803_t/2803xxxx.si4project/: 2803xxxx.SearchResults  2803xxxx.sip_sym  2803xxxx.sip_xab  2803xxxx.sip_xad  2803xxxx.sip_xc  2803xxxx.sip_xf  2803xxxx.sip_xm  2803xxxx.sip_xr  2803xxxx.sip_xsb  2803xxxx.sip_xsd  2803xxxx.siproj  2803xxxx.siwork
driver/uln2803_t/test/: Makefile  motor.h  ptz_init  ptz_init.c  ptz_test
driver/wifi/rtl8189FS_linux_v4.3.24.4_18988.20160812/: .8189fs.ko.cmd  .8189fs.mod.o.cmd  .8189fs.o.cmd  8189fs.ko  8189fs.mod.c  Makefile  modules.order  tags
free-renxinrenlian/: README
image/: create_images.sh  mkimage  root.7z  uImage  uImage.lzma  user.7z
image/binaries/: root.squashfs  root2.squashfs  user.squashfs  user2.squashfs
image/root/: .gitignore
image/root/etc/: SNIP39  TZ  Wireless  fstab  hostname  hosts  mdev.conf  profile  sensor  services  shadow  shadow_bak  syslog.conf  webrtc_profile.ini  ysx
image/root/lib/: libcrypto.so.1.0.0  libcurl.so.4.4.0  libgcc_s.so.1  libnl-3.so.200  libnl-genl-3.so.200  libssl.so.1.0.0  libstdc++.so.6.0.17  libz.so.1.2.8  modules
image/root/sbin/: fsck.fat
image/tools/gen_zone/: Makefile  gen_zone  gen_zone.c
image/tools/wr_flag/: .gitignore  Makefile  wr_flag.c
image/user/lib/: libi2c.so.0.1.0  libjson.so.0.1.0  libzbar.so.0
image/user/notify/: reset.pcm  sd_mount.pcm  tanks.pcm  wifi_conf.pcm  wifi_set.pcm
image/user/share/: fw_version
ipc_sdk/include/: iniparser.h  qcam.h  qcam_audio_input.h  qcam_audio_output.h  qcam_log.h  qcam_motion_detect.h  qcam_smart.h  qcam_sys.h  qcam_video_input.h  rtc_test.h  ysx_sys.h
ipc_sdk/include/ivs/: ivs_inf_custpersonDet.h  ivs_inf_dynamic_tracker.h  ivs_inf_face.h  ivs_inf_figure.h  ivs_inf_motion_tracker.h  ivs_inf_propersonDet.h  ivs_interface.h  verify.h
ipc_sdk/include/openssl/: opensslconf.h
ipc_sdk/lib/: libcrypto.so.1.0.0  libcurl.so.4.4.0  libjson.so.0.1.0  libssl.so.1.0.0  libz.so.1.2.8
ipc_sdk/samples/libimp-samples/: Makefile  sample-Ai  sample-Ai-AEC  sample-Ai-Ref  sample-Ao  sample-Audio  sample-Change-Resolution  sample-EXTFS-Encoder-h264  sample-EXTFS-Encoder-h264-rgba  sample-Encoder-h264-IVS-base-move  sample-Encoder-h264-jpeg  sample-Encoder-jpeg  sample-Encoder-video  sample-Encoder-video-IVS-exalgo  sample-Encoder-video-IVS-move  sample-Encoder-video.c  sample-Framesource  sample-Framesource-algo  sample-ISP-flip  sample-OSD  sample-Setfps  sample-Snap-YUV  sample-common.c  sample-dmic  sample-dmic-aec  sample-dmic-ref
iq/: ap1p.7z  ap2c.7z  tx-isp-t31.ko
iq/imatest/: A_summary.csv  CWF_summary.csv  D65_summary.csv
middleware/audio/: .gitignore
middleware/audio/src/: .gitignore  1-sample-16000KHz-16bit.pcm  1-sample-16000KHz-16bit.pk  Makefile  audio360.pcm  audio_shm.h  audio_test.c  auto_play.sh  beep.pcm  deamonaudio_ysx.c  ding.pcm  dong.pcm  list.c  music.pk  sample-16000KHz-16bit.pcm  sample-16000KHz-16bit.pk  sample-44100KHz-16bit.pcm  sample-44100KHz-16bit.pk  sample-48000KHz-16bit.pcm  sample-8000KHz-16bit.pcm  sample-8000KHz-16bit.pk  sample-8000KHz-16bit_Aec.pcm  sample-8000KHz-16bit_Aec.pk  sample-Audio  sample.pcm  sample_aec.c  sample_play.c  sample_play_so  sample_record.c  sd_error.raw  sd_ok.pcm  test  test_api.c  welcome.pcm  ysx_audio.c  ysx_audio.h  ysx_sample_playback  ysx_sample_playback.c  ysx_sample_record.c  ysx_sem.c  (+1 more)
middleware/common/: .gitignore  Makefile  base64.c  fwupdate.c  gpio_led.c  key_test  key_test.c  key_test_so  keyfunc  keyfunction  keyfunction.c  keyfunction_so  test_wdt.c  wdt  wdt.c  ysx_sys.c
middleware/gpio/: Makefile
middleware/gpio/src/: Makefile  utils.c  utils.h  ysx_gpio.c  ysx_gpio.h
middleware/ptz/: Makefile  ptz_ctrl.c  ptz_ctrl.h  ptz_test  ptz_test.c  ptz_test2  ptz_test_so  test.c  test2.c  test3.c  uln2803.c  uln2803.h
middleware/video/: .gitignore  Makefile
middleware/video/src/: .gitignore  1.txt  Makefile  bmp2font.c  common.h  ipc_ircut.c  (+30 more)
(+503 files in other folders)
